--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-01.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-01.html
@@ -2,6 +2,7 @@
 
 
 <article class="article">
+  <h2>Максим Фатин</h2>
   <p>Конспект из двух видео</p>
   <p>Первое от 2023-08-19 <strong>Самая ПОПУЛЯРНАЯ задача на собеседовании в АВИТО</strong></p>
   <p>Второе <strong>Интервалы</strong></p>
