--- a/src/components/alg/alg-conspect/gustokashin/pages/elem-train3.html
+++ b/src/components/alg/alg-conspect/gustokashin/pages/elem-train3.html
@@ -1,4 +1,10 @@
-<h1>Тренировки по алгоритмам 3.0 (2023.03.10) от Яндекс (Михаил Густокашин)</h1>
+<h1>Тренировки по алгоритмам 3.0</h1>
+
+
+<article class="article">
+  <h2>Михаил Густокашин</h2>
+  <p>Конспект видеокурса <strong>Тренировки по алгоритмам 3.0</strong> от (2023.03.10)</p>
+</article>
 
 
 <!-- Содержание -->
@@ -169,7 +175,7 @@
   <br>Ограничение памяти	64Mb
   <br>Ввод	стандартный ввод или input.txt
   <br>Вывод	стандартный вывод или output.txt
-  
+
   <p>Вовочка ломает систему безопасности Пентагона. Для этого ему понадобилось узнать, какие символы в секретных зашифрованных посланиях употребляются чаще других. Для удобства изучения Вовочка хочет получить графическое представление встречаемости символов. Поэтому он хочет построить гистограмму количества символов в сообщении. Гистограмма — это график, в котором каждому символу, встречающемуся в сообщении хотя бы один раз, соответствует столбик, высота которого пропорциональна количеству этих символов в сообщении.</p>
 
   <h4>Формат ввода</h4>
@@ -181,8 +187,8 @@
   <h4>Пример 1</h4>
   <code>Ввод: Hello, world!</code>
 <pre>Вывод:
-     #   
-     ##  
+     #
+     ##
 #########
 !,Hdelorw</pre>
 
@@ -193,16 +199,16 @@ Did gyre and gimble in the wabe;
 All mimsy were the borogoves,
 And the mome raths outgrabe.</pre>
 <pre>Вывод:
-         #              
-         #              
-         #              
-         #              
-         #              
-         #         #    
-         #  #      #    
-      #  # ###  ####    
-      ## ###### ####    
-      ##############    
+         #
+         #
+         #
+         #
+         #
+         #         #
+         #  #      #
+      #  # ###  ####
+      ## ###### ####
+      ##############
       ##############  ##
 #  #  ############## ###
 ########################
