--- a/src/components/alg/alg-conspect/gustokashin/pages/elem-train4.html
+++ b/src/components/alg/alg-conspect/gustokashin/pages/elem-train4.html
@@ -1,4 +1,10 @@
-<h1>Тренировки по алгоритмам 4.0 (2023.11.18)</h1>
+<h1>Тренировки по алгоритмам 4.0</h1>
+
+
+<article class="article">
+  <h2>Михаил Густокашин</h2>
+  <p>Конспект видеокурса <strong>Тренировки по алгоритмам 4.0</strong> от (2023.11.18)</p>
+</article>
 
 
 <!-- Содержание -->
