--- a/src/components/alg/alg-conspect/gustokashin/pages/elem-train5.html
+++ b/src/components/alg/alg-conspect/gustokashin/pages/elem-train5.html
@@ -1,4 +1,10 @@
-<h1>Тренировки по алгоритмам 5.0 (2024.03.29) от Яндекс (Михаил Густокашин)</h1>
+<h1>Тренировки по алгоритмам 5.0</h1>
+
+
+<article class="article">
+  <h2>Михаил Густокашин</h2>
+  <p>Конспект видеокурса <strong>Тренировки по алгоритмам 5.0</strong> от (2024.03.29)</p>
+</article>
 
 
 <!-- Содержание -->
@@ -23,7 +29,7 @@
         </li>
         <li>
           <a href="#l1-tema-3">Тема 3. Тестирование</a>
-        </li>          
+        </li>
       </ol>
     </li>
     <li>
@@ -37,7 +43,7 @@
             <li><a href="#l2-task-3">Задача 3. Найти максимальное число</a></li>
             <li><a href="#l2-task-4">Задача 4. Найти максимальное и второе по величине число</a></li>
             <li><a href="#l2-task-5">Задача 5. Найти минимальное четное число</a></li>
-          </ul>          
+          </ul>
         </li>
         <li>
           <a href="#l2-tema-2">Тема 2. Два прохода</a>
@@ -45,7 +51,7 @@
             <li><a href="#l2-task-6">Задача 6. Самые короткие слова</a></li>
             <li><a href="#l2-task-7">Задача 7. Сколько воды осталось на острове после сильного дождя</a></li>
           </ul>
-        </li>          
+        </li>
         <li><a href="#l2-tema-3">Тема 3. Задача с собеседования. RLE сжатие строки</a> </li>
       </ol>
     </li>
@@ -66,7 +72,7 @@
     <li>Умения тестировать свой код</li>
     <li>Умения писать эффективный код</li>
   </ol>
-  
+
   <h4>Как этого достичь?</h4>
   <ol>
     <li>Написать 10 000 строк работающего, эффективного и протестированного кода</li>
@@ -117,7 +123,7 @@
     <li>Можно выполнять арифметические и логические операции с одной ячейкой памяти, а также переходы</li>
     <li>Похоже на компьютер</li>
   </ol>
-  
+
   <h4>Сложность алгоритма</h4>
   <ol>
     <li>Сложность алгоритма - порядок количества действий в зависимости от размера входных данных</li>
