--- a/src/components/code/code-asm/pages/elem-asm.html
+++ b/src/components/code/code-asm/pages/elem-asm.html
@@ -6,6 +6,7 @@
   <h2>Содержание</h2>
 
   <p><a href="#links">links</a></p>
+  <p><a href="#asm">Ассемблеры</a></p>
 </div>
 
 
@@ -15,6 +16,38 @@
   <h3>links</h3>
 
   <p><a href="https://assembler-code.com/">assembler-code.com</a> Ассемблерный код Методы эффективного программирования</p>
+  <p><a href="https://wasm.in/">wasm.in</a></p>
 </article>
 
+
+<!-- Ассемблеры -->
+<article class="article">
+  <div class="anchor" id="asm"></div>
+  <h3>Ассемблеры</h3>
+
+  <p>Ассемблеры под Windows и Linux</p>
+  <ol>
+    <li>MASM</li>
+    <li>TASM</li>
+    <li>FASM</li>
+    <li>WASM</li>
+    <li>NASM</li>
+  </ol>
+
+  <h4>MASM</h4>
+  <p><a href="https://www.masm32.com/">masm32.com</a></p>
+
+  <h4>TASM</h4>
+  <p><a href="http://stilus-doctus.narod.ru/tasm/tasm_2.html">stilus-doctus.narod.ru/tasm/tasm_2.html</a></p>
+  <p>Инсталлятора нет, просто извлекаем программу</p>
+
+  <h4>FASM</h4>
+  <p><a href="https://flatassembler.net/">flatassembler.net</a></p>
+  <p>Инсталлятора нет, просто извлекаем программу</p>
+
+  <h4>WASM</h4>
+
+  <h4>NASM</h4>
+  <p><a href="https://www.nasm.us/">nasm.us</a></p>
+</article>
 
