--- a/src/components/code/code-asm/pages/elem-firststeps.html
+++ b/src/components/code/code-asm/pages/elem-firststeps.html
@@ -10,8 +10,9 @@
   <p><a href="#t1">Обязательная теория. Часть 1. Основные понятия</a></p>
   <p><a href="#t2">Обязательная теория. Часть 2. Код и Данные</a></p>
   <p><a href="#a0">MS-DOS и TASM 2.0. Часть 0. Программное обеспечение</a></p>
-  <p><a href="#a1">MS-DOS и TASM 2.0. Часть 1. Кратко об MS-DOS</a></p>
   <p><a href="#soft1">Скачать софт для программирования</a></p>
+  <p><a href="#a1">MS-DOS и TASM 2.0. Часть 1. Кратко об MS-DOS</a></p>
+  <p><a href="#a2">MS-DOS и TASM 2.0. Часть 2. Turbo Assembler</a></p>
   <p><a href="#install">install</a></p>
   <p><a href="#fasm64">fasm64</a></p>
   <p><a href="#pellesc">Pelles C</a></p>
@@ -188,8 +189,70 @@
     <li>Исполняемые файлы.</li>
     <li>Файлы данных.</li>
   </ol>
+  <p>Программа может состоять из одного исполняемого файла, а может включать в себя множество файлов.</p>
 
   <h4>Память</h4>
+  <p>Код и данные в компьютере присутствуют в следующих видах памяти</p>
+  <ol>
+    <li>Жесткий диск. Работает медленно. Имеет большой объем. Данные остаются в памяти при перезагрузке компьютера</li>
+    <li>Оперативная память. Работает быстро. Имеет маленький объем. Данные теряются при перезагрузке компьютера</li>
+    <li>Кэш процессора. Память встроена в процессор. Работает очень быстро. Имеет очень маленький объем. Теряет данные при перезагрузке компьютера</li>
+  </ol>
+  <p>Операционная система делит оперативную память на различные участки по предназначению. В одни участки она записывает свои функции и данные, другие оставляет для пользовательских программ.</p>
+  <p>При запуске исполняемого файла операционная система переписывает его с жёсткого диска в оперативную память. Но переписывает не копируя, а делая записи в определённой последовательности, в определённые места и в определённом объёме.</p>
+
+  <h4>Структура памяти операционной системы MS-DOS</h4>
+  <p><strong>00000 - 9FFFF</strong> 0 - 640Kb (640Kb) Conventional Memory</p>
+  <p><strong>A0000 - EFFFF</strong> 640Kb - 960Kb (320Kb) UMA</p>
+  <p><strong>F0000 - FFFFF</strong> 960Kb - 1Mb (64Kb) BIOS</p>
+  <p><strong>100000 - 10FFEF</strong> HMA</p>
+
+  <h4>Файлы данных и исполняемые файлы</h4>
+  <p>Файлы данных в операционной системе MS-DOS могут иметь различные (практически любые) расширения (TXT, INI, MAC, ASM, CPP). С файлами данных работают исполняемые файлы.</p>
+  <p>Информация в исполняемых файлах разбивается на сегменты. Один сегмент в системе MS-DOS не может превышать 64 Кбайта. Связано это с особенностями работы железа.</p>
+  <p>Исполняемые файлы в системе MS-DOS бывают трёх видов, которые соответствуют расширениям:</p>
+  <ol>
+    <li>СОМ</li>
+    <li>EXE</li>
+    <li>BAT</li>
+  </ol>
+  <ol>
+    <li>Файлы с расширением .COM состоят из одного сегмента, в котором размещаются код, данные и стек. В результате получаем крохотную, «сжатую» программу, размер которой не может превышать 64 Кбайта. В формате COM для системы MS-DOS можно писать любые программы — хватило бы места для данных и кода. Отдельные программы (обработчики прерываний, резидентные программы) обычно пишутся в формате COM.</li>
+    <li>Файлы с расширением EXE для кода, данных и стека имеют отдельные сегменты. Число сегментов данных и кода не ограничено, что даёт возможность создания исполняемых файлов большого размера, не ограничивая объёмы кода и данных.</li>
+    <li>Файлы с расширением BAT — «батники». Они также выполняют определённые действия, однако не являются полноценными исполняемыми программами. В батнике можно записать алгоритм запуска определённых файлов типа СОМ или EXE в определённой последовательности и при определённых условиях. Это очень удобно и экономит уйму времени, исключая монотонные и многочисленные действия пользователя.</li>
+  </ol>
+
+  <h4>Ядро системы MS-DOS.</h4>
+  <p>Операционная система MS-DOS в своём минимальном стандартном виде состоит из следующих файлов:</p>
+  <ol>
+    <li>IO.SYS</li>
+    <li>MSDOS.SYS</li>
+    <li>COMMAND.COM</li>
+    <li>AUTOEXEC.BAT</li>
+    <li>CONFIG.SYS</li>
+  </ol>
+  <p>Причём файлы AUTOEXEC.BAT и CONFIG.SYS для запуска операционной системы не обязательны. Эти файлы являются предшественниками реестра Windows и содержат текстовые записи, позволяющие настроить загрузку системы при запуске (организовать меню загрузки, распределить память, запустить отдельные драйверы и программы).</p>
+</article>
+
+
+<!-- MS-DOS и TASM 2.0. Часть 2. Turbo Assembler -->
+<article class="article">
+  <div class="anchor" id="a2"></div>
+  <h3>MS-DOS и TASM 2.0. Часть 2. Turbo Assembler (2018.10.21)</h3>
+
+  <h4>Turbo Assembler — удачный пакет разработки DOS программ</h4>
+  <p>Изучать ассемблер мы начнём со знаменитого TASM. В годы господства MS-DOS Турбо ассемблер от Borland был одним из самых распространённых средств создания программ, составляя конкуренцию MASM. Вначале не будем пользоваться средой программирования TASMED, а сделаем всё ручками, используя текстовый редактор и Турбо Ассемблер.</p>
+
+  <h4>Этапы создания программы с использованием TASM</h4>
+  <p>Создание программы, которая будет работать в операционной системе MS-DOS включает в себя следующие шаги:</p>
+  <ol>
+    <li>Написание кода(текстовый редактор или среда разработки).</li>
+    <li>Трансляция (tasm.exe).</li>
+    <li>Компановка или линковка (link.exe). Результат вышеназванных действий — создание исполняемого файла (EXE или COM).</li>
+    <li>Отладка (отладчик Turbo Debugger, дезассемблер Sourcer или IDA).</li>
+  </ol>
+
+
 
 
 </article>
