--- a/src/components/alg/alg-conspect/gustokashin/pages/elem-train1.html
+++ b/src/components/alg/alg-conspect/gustokashin/pages/elem-train1.html
@@ -1,4 +1,10 @@
-<h1>Тренировки по алгоритмам 1.0 (2021.06.30)</h1>
+<h1>Тренировки по алгоритмам 1.0</h1>
+
+
+<article class="article">
+  <h2>Михаил Густокашин</h2>
+  <p>Конспект видеокурса <strong>Тренировки по алгоритмам 1.0</strong> от (2021.06.30)</p>
+</article>
 
 
 <!-- Содержание -->
@@ -26,7 +32,7 @@
           <ul>
             <li><a href="#l1-task-4">Задача 4. Квадратное уравнение</a>
           </ul>
-        </li>          
+        </li>
       </ol>
     </li>
     <li>
@@ -40,7 +46,7 @@
             <li><a href="#l2-task-3">Задача 3. Найти максимальное число</a></li>
             <li><a href="#l2-task-4">Задача 4. Найти максимальное и второе по величине число</a></li>
             <li><a href="#l2-task-5">Задача 5. Найти минимальное четное число</a></li>
-          </ul>          
+          </ul>
         </li>
         <li>
           <a href="#l2-tema-2">Тема 2. Два прохода</a>
@@ -48,7 +54,7 @@
             <li><a href="#l2-task-6">Задача 6. Самые короткие слова</a></li>
             <li><a href="#l2-task-7">Задача 7. Сколько воды осталось на острове после сильного дождя</a></li>
           </ul>
-        </li>          
+        </li>
         <li><a href="#l2-tema-3">Тема 3. Задача с собеседования. RLE сжатие строки</a> </li>
       </ol>
     </li>
@@ -201,8 +207,8 @@
     <li>Умения писать эффективный код</li>
   </ol>
 
-  <p>Задача на собеседовании обычно похожа на олимпиадную задачу по информатике, но на собеседовании задачи обычно простые. Если умеете решать олимпиадные задачи, то алгоритмическую секцию пройдете достаточно легко.</p> 
-  
+  <p>Задача на собеседовании обычно похожа на олимпиадную задачу по информатике, но на собеседовании задачи обычно простые. Если умеете решать олимпиадные задачи, то алгоритмическую секцию пройдете достаточно легко.</p>
+
   <h4>Как этого достичь?</h4>
   <ol>
     <li>Написать 10 000 строк работающего, эффективного и протестированного кода</li>
@@ -356,7 +362,7 @@
 
   <h4>Решение 3. Со словарем. O(n+k) = O(n)</h4>
   <p>Заведем словарь, где ключом является символ, а значением - сколько раз он встретился. Если символ встретился впервые - создаем элемент словаря с ключом, совпадающим с этим символом и значением ноль. Прибавляем к элементу словаря с ключом, совпадающим с этим символом, единицу. Проходимся по всей строке - это n операций.</p>
-  
+
   <h4>Решение Михаила</h4>
   <p>Потом проходимся по всем ключам в словаре - это k операций. Это у Михаила.</p>
 
@@ -1060,7 +1066,7 @@ if (d === 0) {
     <li>Положим элемент в список с номером, равным значению функции</li>
   </ol>
 
-  <p>Если два элемента (например 137 и 17) имеют одинаковую последнюю цифру, то они попадут в список под номером 7. Это называется коллизия.</p> 
+  <p>Если два элемента (например 137 и 17) имеют одинаковую последнюю цифру, то они попадут в список под номером 7. Это называется коллизия.</p>
   <p>Для решения коллизии для каждого числа заведем список. Сначала все списки пусты. Добавляем число в список, номер которого вычисляет хеш-функция.</p>
   <p>Если есть множество N в котором лежит K элементов, то мы можем перебрать все элементы за O(N+K). Мы будем идти по всем спискам от 0 до N. Если списук пустой, то переходим к следующему списку. Если список не пустой, то вложенном циклом проходим по всем его элементам.</p>
 
@@ -1068,8 +1074,8 @@ if (d === 0) {
   <p>Когда надо добавить элемент в множество, то мы считаем для него хеш-функцию и добавляем его в нужный список.</p>
 
   <h4>Поиск элемента в множестве</h4>
-  <p>Когда надо найти элемент в множестве, то мы считаем для него хеш-функцию и ищем его в нужном списке. Ищем обычным линейным поиском, который проходит по всем элементам списка.</p>  
-  
+  <p>Когда надо найти элемент в множестве, то мы считаем для него хеш-функцию и ищем его в нужном списке. Ищем обычным линейным поиском, который проходит по всем элементам списка.</p>
+
   <h4>Удаление элемента из множества</h4>
   <p>Когда надо удалить элемент из множества, то вначале его надо найти. Делаем то же самое, что и при поиске элемента. Если в списке нет других элементов, то просто удаляем его и список становится пуст. Если есть еще элементы, то копируем последний элемент на место удаляемого и удаляем последний элемент.</p>
   <p>Поиск занял O(K/N) в среднем, а удаление найденного элемента O(1).</p>
@@ -1081,7 +1087,7 @@ if (d === 0) {
   <div class="anchor" id="l3-task-1"></div>
   <h2>Задача 1. Написать свое множество</h2>
 
-  <p>Создадим пустой массив mySet на setSize элементов. В каждый элемент пустого массива mySet также положим пустой массив.</p> 
+  <p>Создадим пустой массив mySet на setSize элементов. В каждый элемент пустого массива mySet также положим пустой массив.</p>
   <p>Создадим три функции - add() добавление одного элемента в множество, find() поиск элемента в множестве, del() удаление элемента из множества.</p>
   <p>При добавлении числа в можество будем вычислять хеш-функцию. То есть искать остаток от деления числа на размер множества. Хеш-функция вернет нам индекс элемента массива. По этому индексу находится вложенный массив, куда мы добавим новый элемент в конец.</p>
   <p>При поиске числа в множестве будем вычислять хеш-функцию. Получим индекс элемента.Прохойдем линейным поиском по всем элементам вложенного массива и вернем true если он там есть.</p>
@@ -1160,12 +1166,12 @@ if (d === 0) {
     <li>Когда таблица наполнится - увеличим ее размер вдвое и перестроим.</li>
   </ul>
 
-  <p>Найдем сложность добавления N элементов в хэш-таблицу.</p> 
+  <p>Найдем сложность добавления N элементов в хэш-таблицу.</p>
   <ul>
     <li>Возьмем таблицу с начальным размером 1.</li>
     <li>Будем добавлять N = 2^P элементов, т.е. P = logN. Таблица расширяется вдвое, поэтому удобно работать со степенями двойки (число элементов).</li>
     <li>Только на P шагах (когда размер таблицы равен очередной степени двойки) может произойти перестроение таблицы за O(N).</li>
-  </ul>  
+  </ul>
   <code>1 + 2 + 4 + 8 + ... + 2^P = 2^(P+1) - 1 = 2N - 1 = O(N)</code>
 
   <h4>Амортизированная сложность</h4>
@@ -1286,7 +1292,7 @@ if (d === 0) {
   <p>K это разница между максимальным и минимальным значением. K должно быть небольшим.</p>
 
   <h4>Отсортировать последовательность школьных оценок</h4>
-  <p>Например, это школьные оценки от 1 до 5 и нужно их упорядочить. Для таких задач, где не много разных значений мы не будем пользоваться стандартной сортировкой за O(NlogN).</p> 
+  <p>Например, это школьные оценки от 1 до 5 и нужно их упорядочить. Для таких задач, где не много разных значений мы не будем пользоваться стандартной сортировкой за O(NlogN).</p>
   <p>Каждый раз когда встречаем оценку, будем увеличивать счетчик этих оценок на 1. Для этого заведем массив с индексами от 1 до 5. В программировании массивы начинаются с нулевого элемента. Тогда пусть в массиве будет еще один элемент - нулевой, который нигде не будет использоваться, зато вы ничего не напутаете с индексами.</p>
   <p>Сначала заполним массив нулями. Пусть есть последовательность оценок</p>
   <code>5,4,5,3,2,1,5</code>
@@ -1577,7 +1583,7 @@ if (d === 0) {
   function getKey(word) {
     return word.split('').sort();
   }
-  
+
   let groups = {};
   words.forEach(word => {
     let key = getKey(word);
@@ -1652,7 +1658,7 @@ if (d === 0) {
 
   <details>
     <summary>Решение</summary>
-    <p>Можно перебрать все возможные способы и проверить пролезет ли кирпич в отверстие. Но это будет неэффективно.</p> 
+    <p>Можно перебрать все возможные способы и проверить пролезет ли кирпич в отверстие. Но это будет неэффективно.</p>
     <p></p>Давайте сначала упорядочим стороны кирпича от меньшей к большей A,B,C и отверстия - D,E. Тогда получим меньшую сторону кирпича А и меньшую сторону отверстия D. Нам нужно чтобы было A меньше D, и В меньше Е. Самую длинную сторону кирпича А ни с чем сравнивать не надо.
     <p>Кирпич пройдет в отверстие если A &le; D и B &le; E.</p>
     <p>Чтобы упорядочить два числа, просто сравним их. Чтобы упорядочить три числа напишем сортировку пузырьком.</p>
@@ -1880,7 +1886,7 @@ prefixsum  0  5  8  16  17  21  27
 function rsq(l, r) {
   return prefixSum[r] - prefixSum[l];
 }</pre>
-    
+
   <p>Тест</p>
   <code>let w1 = [2,4,5,2,6,9,2];</code>
   <code>let prefixSum = makePrefixSum(w1);</code>
@@ -2105,7 +2111,7 @@ console.log(countPairs(w1, 4)); // 3</pre>
 
   <details>
     <summary>Решение</summary>
-    <p>Решение методом двух указателей.</p> 
+    <p>Решение методом двух указателей.</p>
     <p>Правый указатель на самого сильного игрока сначала будет равен 0. Девым указателем будем идти от нуля до правого и проверять что правый указатель не вышел за диапазон последовательности и левый и правый указатель стали равны или сумма двух самых слабых игроков больше или равна самому сильному игроку. Увеличим правый указатель на 1 и повторим.</p>
 <pre>function bestSum(nums) {
   let result = 0;
@@ -2151,14 +2157,14 @@ console.log(bestSum(w1)); // 23</pre>
       if (p1 === nums1.length) {
         result = result.concat(nums2.slice(p2))
         break;
-      }      
+      }
     } else {
       result.push(nums2[p2]);
       p2++;
       if (p2 === nums2.length) {
         result = result.concat(nums1.slice(p1))
         break;
-      }      
+      }
     }
   }
   return result;
@@ -2371,7 +2377,7 @@ console.log(cherepaha(n1, w1,w2)); // 3</pre>
     <summary>Решение</summary>
     <p>Неверным решением было бы брать строку S, брать в ней первые W символов для слова, сортировать их. Потом сдвигаться в строке S на один символ и опять брать W символов, сортировать их и т.д.</p>
     <p>Хорошая идея это посчитать сколько раз каждая буква входит в слово W. Для этого создадим словарь dictW для букв из слова W. Дальше методом окна выбираем в начале предложения S слово длиной W.length, создаем для него словарь dictS и сравниваем его со словарем dictW. Если совпадают то это будет вхождение слова W в предложение S.</p>
-    <p>Далее сдвигаем окно на 1 символ. Изменим словарь dictS так что уберем из него первый символ предыдущего слова и добавим один новый символ. Сравним словари dictS и dictW, если совпадают, то увеличим счетчик вхождения слов на 1.</p>  
+    <p>Далее сдвигаем окно на 1 символ. Изменим словарь dictS так что уберем из него первый символ предыдущего слова и добавим один новый символ. Сравним словари dictS и dictW, если совпадают, то увеличим счетчик вхождения слов на 1.</p>
   </details>
 </article>
 
@@ -2490,8 +2496,8 @@ console.log(cherepaha(n1, w1,w2)); // 3</pre>
   return maxOnline;
 }
 
-let w1 = 4; 
-let w2 = [1,2,3,4]; 
+let w1 = 4;
+let w2 = [1,2,3,4];
 let w3 = [3,4,5,6];
 
 console.log(maxVisitors(w1,w2,w3));</pre>
@@ -2533,8 +2539,8 @@ console.log(maxVisitors(w1,w2,w3));</pre>
 }
 
 
-let w1 = 4; 
-let w2 = [1,2,5,6]; 
+let w1 = 4;
+let w2 = [1,2,5,6];
 let w3 = [3,3,6,7];
 
 console.log(timeVisitors(w1,w2,w3));</pre>
@@ -2578,8 +2584,8 @@ console.log(timeVisitors(w1,w2,w3));</pre>
 }
 
 
-let w1 = 4; 
-let w2 = [1,2,5,6]; 
+let w1 = 4;
+let w2 = [1,2,5,6];
 let w3 = [3,3,6,7];
 let w4 = 3;
 let w5 = [2,3,4];
@@ -2613,7 +2619,7 @@ console.log(countVisitors(w1,w2,w3,w4,w5));</pre>
 
   <details>
     <summary>Решение</summary>
-    <p>События - приезд и отъезд автомобиля (причем отъезд должен происходить раньше). Будем поддерживать количество занятых мест и если после очередного события счетчик равен N, то такие моменты были.</p> 
+    <p>События - приезд и отъезд автомобиля (причем отъезд должен происходить раньше). Будем поддерживать количество занятых мест и если после очередного события счетчик равен N, то такие моменты были.</p>
     <p>На каждую машину будем прибавлять или вычитать количество парковочных мест, которые она заняла. Никогда две машины не стоят на одних и тех же парковочных местах, поэтому мы можем не поддерживать множество занятых парковочных мест. Можно смотреть сколько в сумме занято мест.</p>
     <p>Завести счетчик. Каждый раз когда машина приехала - прибавлять количество мест, которые она заняла. Не важно на какие конкретно места встала машина, мы знаем что они не пересекаются. Если счетчик станет равен N - общему количеству мест, то были моменты когда все места на парковке заняты.</p>
     <p>Машина car описывается временем приезда timein, временем отъезда timeout, с какого места placefrom по какое место placeto она заняла.</p>
@@ -2631,7 +2637,7 @@ console.log(countVisitors(w1,w2,w3,w4,w5));</pre>
       occuped -= events[i][2];
     } else if (events[i][1] === 1) {
       occuped += events[i][2];
-    } 
+    }
     if (occuped === n) {
       return true;
     }
@@ -2640,8 +2646,8 @@ console.log(countVisitors(w1,w2,w3,w4,w5));</pre>
 }
 
 
-let w1 = [[1,3,1,2],[2,4,2,3]]; 
-let w2 = 2; 
+let w1 = [[1,3,1,2],[2,4,2,3]];
+let w2 = 2;
 
 console.log(isFull(w1,w2));</pre>
   </details>
@@ -2679,7 +2685,7 @@ console.log(isFull(w1,w2));</pre>
     } else if (events[i][1] === 1) {
       occuped += events[i][2];
       nowcars++;
-    } 
+    }
     if (occuped === n) {
       mincars = Math.min(mincars, nowcars);
     }
@@ -2688,8 +2694,8 @@ console.log(isFull(w1,w2));</pre>
 }
 
 
-let w1 = [[1,3,1,2],[2,4,2,3]]; 
-let w2 = 2; 
+let w1 = [[1,3,1,2],[2,4,2,3]];
+let w2 = 2;
 
 console.log(minCars(w1,w2));</pre>
   </details>
@@ -2729,7 +2735,7 @@ console.log(minCars(w1,w2));</pre>
       occuped += events[i][2];
       nowcars++;
       carnums[events[i][3]] = 1;
-    } 
+    }
     if (occuped === n && nowcars &lt; mincars) {
       mincars = nowcars;
       bestcarnums = carnums;
@@ -2739,8 +2745,8 @@ console.log(minCars(w1,w2));</pre>
 }
 
 
-let w1 = [[1,3,1,2],[2,4,2,3]]; 
-let w2 = 2; 
+let w1 = [[1,3,1,2],[2,4,2,3]];
+let w2 = 2;
 
 console.log(carsNumbers(w1,w2));</pre>
     <p>Сложность O(N^2)</p>
@@ -2768,7 +2774,7 @@ console.log(carsNumbers(w1,w2));</pre>
     } else if (events[i][1] === 1) {
       occuped += events[i][2];
       nowcars++;
-    } 
+    }
     if (occuped === n && nowcars &lt; mincars) {
       // минимальное количество
       mincars = nowcars;
@@ -2786,7 +2792,7 @@ console.log(carsNumbers(w1,w2));</pre>
       occuped += events[i][2];
       nowcars++;
       carnums[events[i][3]] = 1;
-    } 
+    }
     if (occuped === n && nowcars === mincars) {
       return Object.keys(carnums);
     }
@@ -2795,8 +2801,8 @@ console.log(carsNumbers(w1,w2));</pre>
 }
 
 
-let w1 = [[1,3,1,2],[2,4,2,3]]; 
-let w2 = 2; 
+let w1 = [[1,3,1,2],[2,4,2,3]];
+let w2 = 2;
 
 console.log(carsNumbers(w1,w2));</pre>
   </details>
@@ -2807,7 +2813,7 @@ console.log(carsNumbers(w1,w2));</pre>
 <article class="article">
   <div class="anchor" id="l8"></div>
   <h2>Лекция 8. Деревья</h2>
-  
+
   <h4>Содержание сегодняшней лекции</h4>
   <ol>
     <li>Собственный менеджер памяти</li>
@@ -2878,7 +2884,7 @@ function delNode(memstruct, index) {
   <h4>Удаление элемента с ключом 4</h4>
   <p>Удаление из дерева это одна из самых сложных операций практически в любой структуре. Сначала найдем элемент с ключом 4.</p>
   <p>Если это лист, то есть у него нет своих потомков,то в его родителе удалим ссылку на него.</p>
-  <p>Если у удаляемого элемента есть только один потомок,то у его родителя меняем указатель с элемента 4 на его единственного сына.</p>   
+  <p>Если у удаляемого элемента есть только один потомок,то у его родителя меняем указатель с элемента 4 на его единственного сына.</p>
   <p>Если у удаляемого элемента 2 ребенка, то есть несколько способов. Рассмотрим один из них. Заменим элемент 4 на первое число, которое больше его. Для этого идем в правое поддерево и ищем в нем самый левый элемент. Там найдем из всех больших чисел самое маленькое число. Если это лист, то есть у него нет потомком, то поставим его на место удаляемого элемента. Если у него один правый сын, то самое маленькое число ставим на мето удаляемого, а правого сына на его место.</p>
   <p>Второй способ это найти самое большое число из левого поддерева и поставить его на место удаляемого элемента</p>
 
@@ -2904,7 +2910,7 @@ function delNode(memstruct, index) {
       return -1;
     } else {
       // рекурсивно ищем в правом поддереве
-      return find(memstruct, right, x);      
+      return find(memstruct, right, x);
     }
   }
 }</pre>
@@ -2943,7 +2949,7 @@ function add(memstruct, root, x) {
     } else {
       // если есть такой узел
       // рекурсивно ищем в правом поддереве
-      return add(memstruct, right, x);      
+      return add(memstruct, right, x);
     }
   }
 }</pre>
