--- a/src/components/alg/alg-conspect/gustokashin/pages/elem-train2.html
+++ b/src/components/alg/alg-conspect/gustokashin/pages/elem-train2.html
@@ -1,4 +1,10 @@
-<h1>Тренировки по алгоритмам 2.0 (2021.10.01) от Яндекс (Михаил Густокашин)</h1>
+<h1>Тренировки по алгоритмам 2.0</h1>
+
+
+<article class="article">
+  <h2>Михаил Густокашин</h2>
+  <p>Конспект видеокурса <strong>Тренировки по алгоритмам 2.0</strong> от (2021.10.01)</p>
+</article>
 
 
 <!-- Содержание -->
