--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-10.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-10.html
@@ -2,7 +2,8 @@
 
 
 <article class="article">
-  <p>Конспект из видео от 2024-08-17 <strong>Почему ты все еще не выучил алгосы_ С чего вообще начать_ RoadMap для разноса собесов!</strong></p>
+  <p>Конспект видео от 2024-08-17</p>
+  <h4>Почему ты все еще не выучил алгосы_ С чего вообще начать_ RoadMap для разноса собесов!</h4>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
