--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-17.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-17.html
@@ -2,7 +2,8 @@
 
 
 <article class="article">
-  <p>Конспект видео <strong>Куча и сортировка подсчетом</strong></p>
+  <p>Конспект видео</p>
+  <h4>Куча и сортировка подсчетом</h4>
 
   <p><a href="https://www.youtube.com/@fatin.maksim/videos">youtube Максим Фатин</a></p>
   <p><a href="https://tskills.ru/algo">https://tskills.ru/algo</a></p>
